<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ass Kick</string>
    <string name="choose_semester">Choose SEMESTER to view courses</string>
    <string name="menu_settings">Settings</string>
    <string name="semester">SEMESTER</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_semester">Semester</string>
    <string name="start">enter start of semester</string>
    <string name="end">enter end of semester</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="enter_course">Enter Course Name</string>
    <string name="enter_num_of_ex">Please Enter The Number Of Exercise</string>
    <string name="ex">Exercise</string>
    <string name="Submit">Submit</string>
    <string name="press_ex">Press on ex number to enter a date</string>
    <string name="add_date">Add Date</string>
    <string name="deleteAll">Delete all data of the semester</string>

</resources>