<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseIntent" >

    <TextView
        android:id="@+id/course_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/enter_num_of_ex"
        android:layout_alignParentRight="true"
        android:onClick="addExercise"
        android:text="@string/Submit" />

    <EditText
        android:id="@+id/enter_num_of_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/Submit"
        android:ems="10"
        android:hint="@string/enter_num_of_ex" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/enter_num_of_ex"
        android:onClick="buttonClick3"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/course_name1"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="48dp"
        android:onClick="buttonClick1"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="buttonClick2"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginLeft="25dp"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="24dp"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginLeft="29dp"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:onClick="buttonClick5"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:onClick="buttonClick6"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_alignRight="@+id/checkBox2"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox5"
        android:layout_alignRight="@+id/checkBox3"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button5"
        android:onClick="buttonClick8"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button6"
        android:onClick="buttonClick9"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/button4"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_below="@+id/button7"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox7"
        android:layout_alignBottom="@+id/checkBox7"
        android:layout_alignRight="@+id/checkBox5"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox8"
        android:layout_alignBottom="@+id/checkBox8"
        android:layout_alignRight="@+id/checkBox6"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button7"
        android:layout_below="@+id/checkBox7"
        android:layout_marginTop="60dp"
        android:onClick="buttonClick10"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox7"
        android:layout_below="@+id/button10"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignRight="@+id/button8"
        android:onClick="buttonClick11"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox8"
        android:layout_below="@+id/button11"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignRight="@+id/button9"
        android:onClick="buttonClick12"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox11"
        android:layout_alignBottom="@+id/checkBox11"
        android:layout_alignRight="@+id/checkBox9"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox10"
        android:layout_below="@+id/button13"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button13"
        android:layout_alignRight="@+id/button11"
        android:onClick="buttonClick14"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox11"
        android:layout_below="@+id/button14"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button14"
        android:layout_alignRight="@+id/button12"
        android:onClick="buttonClick15"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox14"
        android:layout_alignBottom="@+id/checkBox14"
        android:layout_alignRight="@+id/checkBox12"
        android:onClick="onCheckboxClicked"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/checkBox4"
        android:layout_marginTop="59dp"
        android:onClick="buttonClick7"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="58dp"
        android:onClick="buttonClick4"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button10"
        android:layout_below="@+id/checkBox10"
        android:layout_marginTop="64dp"
        android:onClick="buttonClick13"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/press_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enter_num_of_ex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/press_ex"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />
        

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text1Clicked"
        android:visibility="visible" />
        

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:onClick="text2Clicked"
        android:visibility="visible" />
        

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="54dp"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text3Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_alignRight="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text4Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text5Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/textView3"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text6Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_alignRight="@+id/textView4"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text7Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignRight="@+id/textView5"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text8Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignRight="@+id/textView6"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text9Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_alignRight="@+id/textView7"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text10Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignRight="@+id/textView8"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text11Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignRight="@+id/textView9"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text12Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button14"
        android:layout_alignRight="@+id/textView10"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text13Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignRight="@+id/textView11"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text14Clicked"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignRight="@+id/textView12"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
        android:onClick="text15Clicked"
        android:visibility="visible" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:startYear="2012"
        android:visibility="invisible" />

    <Button
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox8"
        android:layout_alignRight="@+id/datePicker"
        android:text="@string/add_date"
		android:onClick="onDateClick"
        android:visibility="invisible" />

</RelativeLayout>